--- a/overlay/packages/apps/Settings/res/values-ru/strings.xml
+++ b/overlay/packages/apps/Settings/res/values-ru/strings.xml
@@ -21,6 +21,6 @@
     <string name="action_kill_foreground_app">Закрытие приложения</string>
 
     <string name="hardware_keys_action_single_handed_left">Режим управления одной рукой (слева)</string>
-    <string name="hardware_keys_action_single_handed_right">Single hand mode (справа)</string>
+    <string name="hardware_keys_action_single_handed_right">Режим управления одной рукой (справа)</string>
 
 </resources>
